@@ -1,3 +1,13 @@
+Wed Oct 26 23:07:59 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/TypeNameEmitter.cpp:
+        * CIDLC/TypeNameEmitter.hpp:
+        
+          Added backend support for the frontend features added by
+          Boris in
+          
+          Tue Oct 25 14:08:44 2005  Boris Kolpackov  <boris@kolpackov.net>.
+
 Wed Oct 26 16:16:32 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>
 
 	* DAnCE/NodeApplication/NodeApp_Configurator.cpp:
